--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,9 +15,6 @@
     <string name="front_title2">Depuis plus de 15 ans, EASY HOME c’est :</string>
 
 
-
-
-
     <!--  Login Page  -->
     <string name="login_title">Connexion</string>
     <string name="login_validate_button">Login</string>
@@ -36,5 +33,7 @@
     <!--  Home Page  -->
     <string name="home_title">Annonces</string>
     <string name="home_criteres_button">Critere</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
